Added translate keys for resourcePoints signs and output.

--- a/resourcepacks/calamity/assets/minecraft/lang/en_us.lang
+++ b/resourcepacks/calamity/assets/minecraft/lang/en_us.lang
@@ -1,3 +1,6 @@
 resourcePoint.sign.ready=Ready
 resourcePoint.sign.perPlayer=%s per player
 resourcePoint.sign.perTeam=%s sec. for team
+
+resourcePoint.output.item=Given [%s] * %s
+resourcePoint.output.effect=Given [%s] for %s seconds
