--- a/resourcepacks/calamity/assets/minecraft/lang/en_us.lang
+++ b/resourcepacks/calamity/assets/minecraft/lang/en_us.lang
@@ -8,7 +8,7 @@ resourcePoint.sign.resetting=Resetting: %s
 resourcePoint.output.item=Given [%s] * %s
 resourcePoint.output.effect=Given [%s] for %s seconds
 
-resourcePoint.statusMessage.progressSeconds=Progress: %s seconds left
-resourcePoint.statusMessage.progressSecond=Progress: %s second left
-resourcePoint.statusMessage.resettingSeconds=Resetting: %s seconds left
-resourcePoint.statusMessage.resettingSecond=Resetting: %s second left
+resourcePoint.statusMessage.progressSeconds=Progress: %s%
+resourcePoint.statusMessage.progressSecond=Progress: %s%
+resourcePoint.statusMessage.resettingSeconds=Resetting: %s%
+resourcePoint.statusMessage.resettingSecond=Resetting: %s%
