--- a/resourcepacks/calamity/assets/minecraft/lang/en_us.lang
+++ b/resourcepacks/calamity/assets/minecraft/lang/en_us.lang
@@ -2,8 +2,8 @@ resourcePoint.sign.ready=Ready
 resourcePoint.sign.perPlayer=%s per player
 resourcePoint.sign.perTeam=%s sec. for team
 resourcePoint.sign.activated=Activated!
-resourcePoint.sign.progress=Progress: %s%s
-resourcePoint.sign.resetting=Resetting: %s%s
+resourcePoint.sign.progress=Progress: %s%%
+resourcePoint.sign.resetting=Resetting: %s%%
 
 resourcePoint.output.item=Given [%s] * %s
 resourcePoint.output.effect=Given [%s] for %s seconds
@@ -11,4 +11,4 @@ resourcePoint.output.effect=Given [%s] for %s seconds
 resourcePoint.statusMessage.progressSeconds=Progress: %s seconds left
 resourcePoint.statusMessage.progressSecond=Progress: %s second left
 resourcePoint.statusMessage.resettingSeconds=Resetting: %s seconds left
-resourcePoint.statusMessage.resettingSecond=Resetting: %s seconds left
+resourcePoint.statusMessage.resettingSecond=Resetting: %s second left
