--- a/resourcepacks/calamity/assets/minecraft/lang/en_us.lang
+++ b/resourcepacks/calamity/assets/minecraft/lang/en_us.lang
@@ -4,9 +4,11 @@ resourcePoint.sign.perTeam=%s sec. for team
 resourcePoint.sign.activated=Activated!
 resourcePoint.sign.progress=Progress: %s%%
 resourcePoint.sign.resetting=Resetting: %s%%
+resourcePoint.sign.type=[%s%s]
 
 resourcePoint.output.item=Given [%s] * %s
-resourcePoint.output.effect=Given [%s] for %s seconds
+resourcePoint.output.effect=Given [%s%3$s] for %s seconds
+resourcePoint.output.effect.level2= II
 
 resourcePoint.statusMessage.progressSeconds=Progress: %s seconds left
 resourcePoint.statusMessage.progressSecond=Progress: %s second left
