--- a/resourcepacks/calamity/assets/minecraft/lang/en_us.lang
+++ b/resourcepacks/calamity/assets/minecraft/lang/en_us.lang
@@ -13,6 +13,11 @@ resourcePoint.output.item=Given [%s] * %s
 resourcePoint.output.effect=Given [%s%3$s] for %s seconds
 resourcePoint.output.effect.level2= II
 
+majorPoint.output=%s won [%s] * %s.
+majorPoint.output.draw=%s point resulted in a draw, nothing awarded!
+team.blue=Blue
+team.red=Red
+
 resourcePoint.statusMessage.progressSeconds=Progress: %s seconds left
 resourcePoint.statusMessage.progressSecond=Progress: %s second left
 resourcePoint.statusMessage.resettingSeconds=Resetting: %s seconds left
