Added blue and red team translation keys

--- a/resourcepacks/calamity/assets/minecraft/lang/en_us.json
+++ b/resourcepacks/calamity/assets/minecraft/lang/en_us.json
@@ -22,5 +22,8 @@
 	"resourcePoint.statusMessage.progressSeconds": "Progress: %s seconds left",
 	"resourcePoint.statusMessage.progressSecond": "Progress: %s second left",
 	"resourcePoint.statusMessage.resettingSeconds": "Resetting: %s seconds left",
-	"resourcePoint.statusMessage.resettingSecond": "Resetting: %s second left"
+	"resourcePoint.statusMessage.resettingSecond": "Resetting: %s second left",
+
+	"team.name.blue": "Blue",
+	"team.name.red": "Red"
 }
