--- a/resourcepacks/calamity/assets/minecraft/lang/en_us.json
+++ b/resourcepacks/calamity/assets/minecraft/lang/en_us.json
@@ -3,7 +3,7 @@
 	"resourcePoint.sign.perPlayer": "%s per player",
 	"resourcePoint.sign.perTeam": "%s sec. for team",
 	"resourcePoint.sign.activated": "Activated!",
-	"resourcePoint.sign.progress": "Progress: %s%%",
+	"resourcePoint.sign.progress": "Charging: %s%%",
 	"resourcePoint.sign.resetting": "Resetting: %s%%",
 	"resourcePoint.sign.type": "[%s%s]",
 
@@ -19,8 +19,8 @@
 	"team.blue": "Blue",
 	"team.red": "Red",
 
-	"resourcePoint.statusMessage.progressSeconds": "Progress: %s seconds left",
-	"resourcePoint.statusMessage.progressSecond": "Progress: %s second left",
+	"resourcePoint.statusMessage.chargeSeconds": "Charging: %s seconds left",
+	"resourcePoint.statusMessage.chargeSecond": "Charging: %s second left",
 	"resourcePoint.statusMessage.resettingSeconds": "Resetting: %s seconds left",
 	"resourcePoint.statusMessage.resettingSecond": "Resetting: %s second left",
 
