--- a/resourcepacks/calamity/assets/minecraft/lang/en_us.json
+++ b/resourcepacks/calamity/assets/minecraft/lang/en_us.json
@@ -7,7 +7,7 @@
 	"resourcePoint.sign.resetting": "Resetting: %s%%",
 	"resourcePoint.sign.type": "[%s%s]",
 	"sign.moesh.enchant": "Enchantment",
-	"resourcePoint.sign.enchant": "Enchants held item",
+	"resourcePoint.sign.enchant": "Enchant held item",
 
 	"resourcePoint.output.item": "Given [%s] * %s",
 	"resourcePoint.output.effect": "Given [%s%3$s] for %s seconds",
