Created texture and sounds for pressure eye

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -27,5 +27,8 @@
 	"team.name.blue": "Blue",
 	"team.name.red": "Red",
 
-	"book.pageIndicator": "§d§ov5.0.0"
+	"book.pageIndicator": "§d§ov5.0.0",
+
+	"calamity.subtitle.eye.squish": "Eye squished",
+	"calamity.subtitle.eye.release": "Eye opened"
 }
