Resolves #64: Start conditions checked frequently

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -19,6 +19,9 @@
 	"team.blue": "Blue",
 	"team.red": "Red",
 
+	"calamity.ready":" Ready",
+	"calamity.notReady":" Not ready",
+
 	"resourcePoint.statusMessage.chargeSeconds": "Charging: %s seconds left",
 	"resourcePoint.statusMessage.chargeSecond": "Charging: %s second left",
 	"resourcePoint.statusMessage.resettingSeconds": "Resetting: %s seconds left",
