Added team specific strings for match start/stop

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -33,6 +33,8 @@
 	"calamity.book.hover.leaveTeam.1":"Leave your team",
 	"calamity.book.hover.leaveTeam.2":"You can be randomized to a team",
 	"calamity.book.hover.notPlaying":"You will not play the next match",
+	"calamity.book.hover.readyTeam":"Toggle your team's ready status. Match countdown will begin when both teams are ready.",
+	"calamity.book.readyTeam":"Toggle team ready",
 	"calamity.book.hover.start":"Start match after 15 seconds",
 	"calamity.book.hover.toggleSpectator.1":"Toggle your game mode between",
 	"calamity.book.hover.toggleSpectator.2":"adventure and creative",
@@ -73,7 +75,8 @@
 	"calamity.icon.view":"0",
 	"calamity.joined.team":"%s joined %s",
 	"calamity.left.team":"%s abandoned hope",
-	"calamity.match.cancelled.byPlayer":"%s ⏹ cancelled match",
+	"calamity.match.cancelled.byPlayer":"%s ⏹ cancelled a match",
+	"calamity.match.started.byPlayer":"%s ▶ started a match",
 	"calamity.match.cancelled.noPlayers":"At least one player must be on a team to start a match",
 	"calamity.match.cancelled":"Match ⏹ cancelled",
 	"calamity.match.stats":"%1$s to %2$s. %3$s %4$s won by %5$s points!",
