--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -1,24 +1,24 @@
 {	
 	"book.pageIndicator": "§d§ov5.0.0",
-	"death.attack.outOfWorld": "%1$s fell to calamity",
 	"commands.trigger.failed.unprimed": "You're not able to use this command right now",
+	"death.attack.outOfWorld": "%1$s fell to calamity",
 	
-	"map.name":"Calamity",
 	"by.author":"by %s",
-	"map.author":"Moesh",
 	"map.author.hover.link":"Click to view link",
+	"map.author.name":"Moesh",
+	"map.name":"Calamity",
 
-	"arena.calamity.name":"Calamity",
 	"arena.calamity.author":"Moesh",
 	"arena.calamity.icon":"z",
-	"arena.shattering.name":"Shattering",
+	"arena.calamity.name":"Calamity",
 	"arena.shattering.author":"Moesh",
 	"arena.shattering.icon":"x",
+	"arena.shattering.name":"Shattering",
 
 	"spacer.brackets.left":" (%s)",
 	"spacer.left":" %s",
-	"spacer.right":"%s ",
 	"spacer.middle":"%s %s",
+	"spacer.right":"%s ",
 	"system.message":">>> %s",
 	
 	"team.blue": "Blue",
@@ -26,37 +26,37 @@
 	"team.spectator": "Spectator",
 
 	"calamity.book.cancelStart":"cancel",
+	"calamity.book.forfeit":"Forfeit",
 	"calamity.book.gm":"gm",
 	"calamity.book.hover.cancel":"Cancel match",
+	"calamity.book.hover.forfeit":"Vote to end the match [/trigger gg]",
 	"calamity.book.hover.joinBlue":"Join the Blue team",
 	"calamity.book.hover.joinRed":"Join the Red team",
 	"calamity.book.hover.leaveTeam.1":"Leave your team",
 	"calamity.book.hover.leaveTeam.2":"You can be randomized to a team",
 	"calamity.book.hover.notPlaying":"You will not play the next match",
 	"calamity.book.hover.readyTeam":"Toggle your team's ready status. Match countdown will begin when both teams are ready.",
-	"calamity.book.readyTeam":"Toggle team ready",
+	"calamity.book.hover.resetSpawnItem":"Choose a new respawn item when you respawn",
 	"calamity.book.hover.start":"Start match after 15 seconds",
 	"calamity.book.hover.toggleSpectator.1":"Toggle your game mode between",
 	"calamity.book.hover.toggleSpectator.2":"adventure and creative",
 	"calamity.book.leaveTeam":"Leave team",
 	"calamity.book.li.li":"  + ",
 	"calamity.book.li":"• ",
+	"calamity.book.matchOptions.title":"Match options:",
 	"calamity.book.objective.1":"Gain points by capturing resources, killing, or crafting items with iron ingots. First team to reach the score goal wins!",
 	"calamity.book.objective.2":"The score goal is lowered when iron ore is removed from the central mines.",
 	"calamity.book.objective.title":"Objective:",
 	"calamity.book.randomize.all":"Randomize all",
 	"calamity.book.randomize.rest":"Randomize rest",
+	"calamity.book.readyTeam":"Toggle team ready",
+	"calamity.book.resetSpawnItem":"Reset spawn item",
 	"calamity.book.selectArena.title":"Select arena: ",
 	"calamity.book.spectate":"Spectate",
 	"calamity.book.start":"Start",
 	"calamity.book.teams.or":"%s or %s",
 	"calamity.book.teams":"Team:",
 	"calamity.book.title":"Calamity by Moesh",
-	"calamity.book.matchOptions.title":"Match options:",
-	"calamity.book.forfeit":"Forfeit",
-	"calamity.book.resetSpawnItem":"Reset spawn item",
-	"calamity.book.hover.resetSpawnItem":"Choose a new respawn item when you respawn",
-	"calamity.book.hover.forfeit":"Vote to end the match [/trigger gg]",
 	"calamity.cheated.yourself":"You cheated not only the game, but yourself. You didn't grow. You didn't improve. You took a shortcut and gained nothing. You experienced a hollow victory. Nothing was risked and nothing was gained. It's sad that you don't know the difference.",
 	"calamity.feature.notAvailable":"Not available",
 	"calamity.forfeit.draw":"It's a draw!",
@@ -75,10 +75,10 @@
 	"calamity.icon.view":"0",
 	"calamity.joined.team":"%s joined %s",
 	"calamity.left.team":"%s abandoned hope",
-	"calamity.match.cancelled.byPlayer":"%s ⏹ cancelled a match",
-	"calamity.match.started.byPlayer":"%s ▶ started a match",
+	"calamity.match.cancelled.byPlayer":"%s %s cancelled a match",
 	"calamity.match.cancelled.noPlayers":"At least one player must be on a team to start a match",
-	"calamity.match.cancelled":"Match ⏹ cancelled",
+	"calamity.match.cancelled":"Match %s cancelled",
+	"calamity.match.started.byPlayer":"%s %s started a match",
 	"calamity.match.stats":"%1$s to %2$s. %3$s %4$s won by %5$s points!",
 	"calamity.notReady":"Not ready",
 	"calamity.out.of.bounds":"Out of bounds!",
