Fixed 77: Percent signs now appear correctly

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -106,9 +106,9 @@
 	"calamity.resourcePoint.sign.enchant": "For main hand",
 	"calamity.resourcePoint.sign.perPlayer": "%s per player",
 	"calamity.resourcePoint.sign.perTeam": "%s sec. for team",
-	"calamity.resourcePoint.sign.progress": "Charging: %s",
+	"calamity.resourcePoint.sign.progress": "Charging: %s%%",
 	"calamity.resourcePoint.sign.ready": "Ready",
-	"calamity.resourcePoint.sign.resetting": "Resetting: %s",
+	"calamity.resourcePoint.sign.resetting": "Resetting: %s%%",
 	"calamity.resourcePoint.sign.type": "[%s%s]",
 	"calamity.resourcePoint.statusMessage.chargeSecond": "Charging: %s second left",
 	"calamity.resourcePoint.statusMessage.chargeSeconds": "Charging: %s seconds left",
