All JSON components now use translate (#74)
* All JSON components now use translate
* Added de_de and fr_fr language files.

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -1,39 +1,131 @@
-{
-	"resourcePoint.sign.ready": "Ready",
-	"resourcePoint.sign.perPlayer": "%s per player",
-	"resourcePoint.sign.perTeam": "%s sec. for team",
-	"resourcePoint.sign.attack": "%s sec. attack",
-	"resourcePoint.sign.activated": "Activated!",
-	"resourcePoint.sign.progress": "Charging: %s%%",
-	"resourcePoint.sign.resetting": "Resetting: %s%%",
-	"resourcePoint.sign.type": "[%s%s]",
-	"sign.moesh.enchant": "Enchanted Book",
-	"resourcePoint.sign.enchant": "For main hand",
-
-	"resourcePoint.output.item": "Given [%s] * %s",
-	"resourcePoint.output.effect": "Given [%s%3$s] for %s seconds",
-	"resourcePoint.output.attackEffect": "Sent enemy [%s%3$s] for %s seconds",
-	"resourcePoint.output.attackedEffect": "Given [%s%3$s] for %s seconds",
-	"resourcePoint.output.effect.level2": " II",
-
+{	
+	"arena.calamity.author":"Moesh",
+	"arena.calamity.icon":"z",
+	"arena.calamity.name":"Calamity",
+	"arena.shattering.author":"Moesh",
+	"arena.shattering.icon":"x",
+	"arena.shattering.name":"Shattering",
+	"book.pageIndicator": "§d§ov5.0.0",
+	"by.author":"by %s",
+	"calamity.book.cancelStart":"cancel",
+	"calamity.book.forfeit":"Forfeit",
+	"calamity.book.gm":"gm",
+	"calamity.book.hover.cancel":"Cancel match",
+	"calamity.book.hover.forfeit":"Vote to end the match [/trigger gg]",
+	"calamity.book.hover.joinBlue":"Join the Blue team",
+	"calamity.book.hover.joinRed":"Join the Red team",
+	"calamity.book.hover.leaveTeam.1":"Leave your team",
+	"calamity.book.hover.leaveTeam.2":"You can be randomized to a team",
+	"calamity.book.hover.notPlaying":"You will not play the next match",
+	"calamity.book.hover.readyTeam":"Toggle your team's ready status. Match countdown will begin when both teams are ready.",
+	"calamity.book.hover.resetSpawnItem":"Choose a new respawn item when you respawn",
+	"calamity.book.hover.start":"Start match after 15 seconds",
+	"calamity.book.hover.toggleSpectator.1":"Toggle your game mode between",
+	"calamity.book.hover.toggleSpectator.2":"adventure and creative",
+	"calamity.book.leaveTeam":"Leave team",
+	"calamity.book.li.li":"  + ",
+	"calamity.book.li":"• ",
+	"calamity.book.matchOptions.title":"Match options:",
+	"calamity.book.objective.1":"Gain points by capturing resources, killing, or crafting items with iron ingots. First team to reach the score goal wins!",
+	"calamity.book.objective.2":"The score goal is lowered when iron ore is removed from the central mines.",
+	"calamity.book.objective.title":"Objective:",
+	"calamity.book.randomize.all":"Randomize all",
+	"calamity.book.randomize.rest":"Randomize rest",
+	"calamity.book.readyTeam":"Toggle team ready",
+	"calamity.book.resetSpawnItem":"Reset spawn item",
+	"calamity.book.selectArena.title":"Select arena: ",
+	"calamity.book.spectate":"Spectate",
+	"calamity.book.start":"Start",
+	"calamity.book.teams.or":"%s or %s",
+	"calamity.book.teams":"Team:",
+	"calamity.book.title":"Calamity by Moesh",
+	"calamity.cheated.yourself":"You cheated not only the game, but yourself. You didn't grow. You didn't improve. You took a shortcut and gained nothing. You experienced a hollow victory. Nothing was risked and nothing was gained. It's sad that you don't know the difference.",
+	"calamity.feature.notAvailable":"Not available",
+	"calamity.forfeit.draw":"It's a draw!",
+	"calamity.forfeit.retracted.stopped":"%s has retracted their forfeit vote. Voting stopped.",
+	"calamity.forfeit.retracted":"%s has retracted their forfeit vote. %s out of the needed %s players on the team have voted to forfeit the game.",
+	"calamity.forfeit.started":"%s has voted to forfeit the game. %s out of the needed %s players have voted to forfeit. Use [%s] to vote.",
+	"calamity.forfeit":"%s %s has forfeited!",
+	"calamity.hover.sendTriggerCommand":"Click here to send the command to your text box",
+	"calamity.hover.viewGitHub":"Click to view the GitHub repo",
+	"calamity.icon.blue_team":"b",
+	"calamity.icon.calamity":"C",
+	"calamity.icon.glory":"G",
+	"calamity.icon.red_team":"r",
+	"calamity.icon.shuffle_all":"2",
+	"calamity.icon.shuffle_rest":"1",
+	"calamity.icon.view":"0",
+	"calamity.joined.team":"%s joined %s",
+	"calamity.left.team":"%s abandoned hope",
+	"calamity.match.cancelled.byPlayer":"%s %s cancelled a match",
+	"calamity.match.cancelled.noPlayers":"At least one player must be on a team to start a match",
+	"calamity.match.cancelled":"Match %s cancelled",
+	"calamity.match.started.byPlayer":"%s %s started a match",
+	"calamity.match.stats":"%1$s to %2$s. %3$s %4$s won by %5$s points!",
+	"calamity.notReady":"Not ready",
+	"calamity.out.of.bounds":"Out of bounds!",
+	"calamity.player.sidelined":"%s has been moved to the sidelines. Nothing has been affected. The match continues!",
+	"calamity.points":"%s: +%s points",
+	"calamity.prestige.blueForfeit.blue":"You've kept your dignity",
+	"calamity.prestige.blueForfeit.red":"Blue knew not to mess with you!",
+	"calamity.prestige.lost":"Lost by %s points",
+	"calamity.prestige.redForfeit.blue":"Red gracefully gave up",
+	"calamity.prestige.redForfeit.red":"You'll live to fight again",
+	"calamity.prestige.won":"Won by %s points",
+	"calamity.ready":"Ready",
+	"calamity.reset.map":"Use [%s] to play again.",
+	"calamity.resetItems.alreadyChosen":"You have already chosen to reset your item next time you respawn.",
+	"calamity.resetItems.haventChosen":"You haven't selected an item yet. Nothing to reset.",
+	"calamity.resetItems":"You will get to select a new item the next time you respawn.",
+	"calamity.resetting":"Resetting to default state",
+	"calamity.resourcePoint.output.attackedEffect": "Given [%s%3$s] for %s seconds",
+	"calamity.resourcePoint.output.attackEffect": "Sent enemy [%s%3$s] for %s seconds",
+	"calamity.resourcePoint.output.effect.level2": " II",
+	"calamity.resourcePoint.output.effect": "Given [%s%3$s] for %s seconds",
+	"calamity.resourcePoint.output.item": "Given [%s] * %s",
+	"calamity.resourcePoint.sign.activated": "Activated!",
+	"calamity.resourcePoint.sign.attack": "%s sec. attack",
+	"calamity.resourcePoint.sign.enchant": "For main hand",
+	"calamity.resourcePoint.sign.perPlayer": "%s per player",
+	"calamity.resourcePoint.sign.perTeam": "%s sec. for team",
+	"calamity.resourcePoint.sign.progress": "Charging: %s%%",
+	"calamity.resourcePoint.sign.ready": "Ready",
+	"calamity.resourcePoint.sign.resetting": "Resetting: %s%%",
+	"calamity.resourcePoint.sign.type": "[%s%s]",
+	"calamity.resourcePoint.statusMessage.chargeSecond": "Charging: %s second left",
+	"calamity.resourcePoint.statusMessage.chargeSeconds": "Charging: %s seconds left",
+	"calamity.resourcePoint.statusMessage.resettingSecond": "Resetting: %s second left",
+	"calamity.resourcePoint.statusMessage.resettingSeconds": "Resetting: %s seconds left",
+	"calamity.seekGlory":"Seek glory or fall to calamity!",
+	"calamity.sidelines":"%s moved to the sidelines",
+	"calamity.startMatch.last5seconds":"%s...",
+	"calamity.startMatch.oneSecond":"Match ▶ begins in %s second",
+	"calamity.startMatch.start":"Match ▶ begins in %s seconds",
+	"calamity.subtitle.eye.release": "Eye opened",
+	"calamity.subtitle.eye.squish": "Eye squished",
+	"calamity.team.notReady.blue":"%s %s needs a moment %s",
+	"calamity.team.notReady.red":"%s %s says hol' up %s",
+	"calamity.team.ready":"%s %s is ready %s",
+	"calamity.troll": "%s fell in the troll hole! How embarassing!",
+	"calamity.unicode.ballotBox.check":"☑",
+	"calamity.unicode.ballotBox.heart":"❤",
+	"calamity.unicode.ballotBox.scratch":"☒",
+	"calamity.unicode.next":"⏭",
+	"calamity.unicode.play":"▶",
+	"calamity.unicode.stop":"⏹",
+	"calamity.welcome.objective":"Objective: Collect enough points to reach the score goal. Click %s to view the online readme!",
+	"calamity.welcome":"Welcome to Calamity: Definitive Edition! Created by Moesh.",
+	"commands.trigger.failed.unprimed": "You're not able to use this command right now",
+	"death.attack.outOfWorld": "%1$s fell to calamity",
+	"map.author.hover.link":"Click to view link",
+	"map.author.name":"Moesh",
+	"map.name":"Calamity",
+	"spacer.brackets.left":" (%s)",
+	"spacer.left":" %s",
+	"spacer.middle":"%s %s",
+	"spacer.right":"%s ",
+	"system.message":">>> %s",
 	"team.blue": "Blue",
 	"team.red": "Red",
-
-	"calamity.ready":"Ready",
-	"calamity.notReady":"Not ready",
-
-	"resourcePoint.statusMessage.chargeSeconds": "Charging: %s seconds left",
-	"resourcePoint.statusMessage.chargeSecond": "Charging: %s second left",
-	"resourcePoint.statusMessage.resettingSeconds": "Resetting: %s seconds left",
-	"resourcePoint.statusMessage.resettingSecond": "Resetting: %s second left",
-
-	"team.name.blue": "Blue",
-	"team.name.red": "Red",
-
-	"book.pageIndicator": "§d§ov5.0.0",
-
-	"calamity.subtitle.eye.squish": "Eye squished",
-	"calamity.subtitle.eye.release": "Eye opened",
-	
-	"death.attack.outOfWorld": "%1$s fell to calamity"
+	"team.spectator": "Spectator"
 }
