--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -11,7 +11,7 @@
 	"calamity.book.forfeit":"Forfeit",
 	"calamity.book.gm":"gm",
 	"calamity.book.hover.cancel":"Cancel match",
-	"calamity.book.hover.forfeit":"Vote to end the match [/trigger gg]",
+	"calamity.book.hover.forfeit":"Vote to end the match [%s]",
 	"calamity.book.hover.joinBlue":"Join the Blue team",
 	"calamity.book.hover.joinRed":"Join the Red team",
 	"calamity.book.hover.leaveTeam.1":"Leave your team",
@@ -48,13 +48,6 @@
 	"calamity.forfeit":"%s %s has forfeited!",
 	"calamity.hover.sendTriggerCommand":"Click here to send the command to your text box",
 	"calamity.hover.viewGitHub":"Click to view the GitHub repo",
-	"calamity.icon.blue_team":"b",
-	"calamity.icon.calamity":"C",
-	"calamity.icon.glory":"G",
-	"calamity.icon.red_team":"r",
-	"calamity.icon.shuffle_all":"2",
-	"calamity.icon.shuffle_rest":"1",
-	"calamity.icon.view":"0",
 	"calamity.joined.team":"%s joined %s",
 	"calamity.left.team":"%s abandoned hope",
 	"calamity.match.cancelled.byPlayer":"%s %s cancelled a match",
@@ -98,21 +91,14 @@
 	"calamity.resourcePoint.statusMessage.resettingSeconds": "Resetting: %s seconds left",
 	"calamity.seekGlory":"Seek glory or fall to calamity!",
 	"calamity.sidelines":"%s moved to the sidelines",
-	"calamity.startMatch.last5seconds":"%s...",
-	"calamity.startMatch.oneSecond":"Match ▶ begins in %s second",
-	"calamity.startMatch.start":"Match ▶ begins in %s seconds",
+	"calamity.startMatch.countdown.lastFiveSeconds":"%s...",
+	"calamity.startMatch.countdown":"Match ▶ begins in %s seconds",
 	"calamity.subtitle.eye.release": "Eye opened",
 	"calamity.subtitle.eye.squish": "Eye squished",
 	"calamity.team.notReady.blue":"%s %s needs a moment %s",
 	"calamity.team.notReady.red":"%s %s says hol' up %s",
 	"calamity.team.ready":"%s %s is ready %s",
 	"calamity.troll": "%s fell in the troll hole! How embarassing!",
-	"calamity.unicode.ballotBox.check":"☑",
-	"calamity.unicode.ballotBox.heart":"❤",
-	"calamity.unicode.ballotBox.scratch":"☒",
-	"calamity.unicode.next":"⏭",
-	"calamity.unicode.play":"▶",
-	"calamity.unicode.stop":"⏹",
 	"calamity.welcome.objective":"Objective: Collect enough points to reach the score goal. Click %s to view the online readme!",
 	"calamity.welcome":"Welcome to Calamity: Definitive Edition! Created by Moesh.",
 	"commands.trigger.failed.unprimed": "You're not able to use this command right now",
@@ -127,5 +113,10 @@
 	"system.message":">>> %s",
 	"team.blue": "Blue",
 	"team.red": "Red",
-	"team.spectator": "Spectator"
+	"team.spectator": "Spectator",
+	"calamity.click.here":"here",
+	"translator.name":"Moesh",
+	"calamity.resourcePoint.enchantedBook.valid":"Valid item found! %s given.",
+	"calamity.resourcePoint.enchantedBook.invalid":"No valid item found in main hand. Have a %s book.",
+	"calamity.resourcePoint.enchantedBook.announced":"An %s was created by %s %s!"
 }
