--- a/resourcepacks/calamity/assets/calamity/lang/fr_fr.json
+++ b/resourcepacks/calamity/assets/calamity/lang/fr_fr.json
@@ -23,11 +23,11 @@
     "calamity.book.hover.toggleSpectator.1": "Change ton mode de jeu entre",
     "calamity.book.hover.toggleSpectator.2": "aventure et cr\u00e9atif",
     "calamity.book.leaveTeam": "Quitter l'\u00e9quipe",
-    "calamity.book.li": "\u2022 ",
     "calamity.book.li.li": "  + ",
+    "calamity.book.li": "\u2022 ",
     "calamity.book.matchOptions.title": "Options du match:",
-    "calamity.book.objective.1": "Obtenez des points en r\u00e9cup\u00e9rant des ressources, tuant des joueurs, ou en fabriquant des objets avec des lingots de fer. La premi\u00e8re \u00e9quipe \u00e0 atteindre l'objectif gagne !",
-    "calamity.book.objective.2": "Le score de l'objectif r\u00e9duit lorsque la quantit\u00e9 de fer dans les mines du centre r\u00e9duit.",
+    "calamity.book.objective.1": "Obtenez des points en r\u00e9cup\u00e9rant des ressources, tuant, ou en fabriquant des objets avec du fer. La premi\u00e8re \u00e9quipe \u00e0 atteindre l'objectif gagne !",
+    "calamity.book.objective.2": "Le score de l'objectif r\u00e9duit lorsque la quantit\u00e9 de fer dans les mines r\u00e9duit.",
     "calamity.book.objective.title": "Objectif:",
     "calamity.book.randomize.all": "Tout al\u00e9atoiriser",
     "calamity.book.randomize.rest": "Al\u00e9atoiriser le reste",
@@ -36,23 +36,23 @@
     "calamity.book.selectArena.title": "S\u00e9lectionner l'ar\u00e8ne: ",
     "calamity.book.spectate": "Etre spectateur",
     "calamity.book.start": "D\u00e9marrer",
-    "calamity.book.teams": "\u00c9quipe:",
     "calamity.book.teams.or": "%s ou %s",
+    "calamity.book.teams": "\u00c9quipe:",
     "calamity.book.title": "Calamity par Moesh",
     "calamity.cheated.yourself": "Non seulement tu triches en p\u00e9nalisant le jeu, mais tu te p\u00e9nalises aussi. Tu n'as pas grandi. Tu ne t'es pas am\u00e9lior\u00e9. Tu as pris un raccourci et tu n'as rien gagn\u00e9. Ta victoire est creuse et sans int\u00e9r\u00eat.  Tu n'as rien risqu\u00e9 ni obtenu quoi que ce soit. C'est triste que tu ne vois pas la diff\u00e9rence.",
     "calamity.feature.notAvailable": "Non disponible",
-    "calamity.forfeit": "L'\u00e9quipe %s %s a d\u00e9clar\u00e9 forfait!",
     "calamity.forfeit.draw": "\u00c9galit\u00e9!",
-    "calamity.forfeit.retracted": "%s a retir\u00e9 son vote pour d\u00e9clarer forfait. %s sur %s joueurs de l'\u00e9quipe ont vot\u00e9 afin de d\u00e9clarer forfait.",
     "calamity.forfeit.retracted.stopped": "%s a retir\u00e9 son vote pour d\u00e9clarer forfait. Fin du vote.",
+    "calamity.forfeit.retracted": "%s a retir\u00e9 son vote pour d\u00e9clarer forfait. %s sur %s joueurs de l'\u00e9quipe ont vot\u00e9 afin de d\u00e9clarer forfait.",
     "calamity.forfeit.started": "%s a vot\u00e9 afin de d\u00e9clarer forfait. %s sur %s joueurs ont d\u00e9clar\u00e9 forfait. Utilise [%s] afin de voter.",
+    "calamity.forfeit": "L'\u00e9quipe %s %s a d\u00e9clar\u00e9 forfait!",
     "calamity.hover.sendTriggerCommand": "Clique ici afin d'envoyer la commande dans le chat",
     "calamity.hover.viewGitHub": "Clique ici afin de visiter le GitHub repo",
     "calamity.joined.team": "%s a rejoins l'\u00e9quipe %s",
     "calamity.left.team": "%s a abandonn\u00e9 tout espoir",
-    "calamity.match.cancelled": "Match \u23f9 annul\u00e9",
     "calamity.match.cancelled.byPlayer": "%s \u23f9 a annul\u00e9 le match",
     "calamity.match.cancelled.noPlayers": "Au minimum 1 joueur doit \u00eatre dans chaque \u00e9quipe afin de d\u00e9marrer le match",
+    "calamity.match.cancelled": "Match \u23f9 annul\u00e9",
     "calamity.match.started.byPlayer": "L'\u00e9quipe %s %s a d\u00e9marr\u00e9 un match",
     "calamity.match.stats": "%1$s contre %2$s. %3$s %4$s a gagn\u00e9 de %5$s points !",
     "calamity.notReady": "En attente",
@@ -67,14 +67,14 @@
     "calamity.prestige.won": "Gagn\u00e9 de %s points",
     "calamity.ready": "Pr\u00eat",
     "calamity.reset.map": "Utilise [%s] afin de rejouer.",
-    "calamity.resetItems": "Tu seras autoris\u00e9 \u00e0 choisir un nouvel objet par d\u00e9faut lors de ta prochaine r\u00e9apparition.",
     "calamity.resetItems.alreadyChosen": "Tu as d\u00e9j\u00e0 choisi de r\u00e9initialiser tes objets la prochaine fois que tu r\u00e9apparais.",
     "calamity.resetItems.haventChosen": "Tu n'as pas encore s\u00e9lectionn\u00e9 d'objet. Rien \u00e0 r\u00e9initialiser.",
+    "calamity.resetItems": "Tu seras autoris\u00e9 \u00e0 choisir un nouvel objet par d\u00e9faut lors de ta prochaine r\u00e9apparition.",
     "calamity.resetting": "R\u00e9initialisation aux param\u00e8tres par d\u00e9faut",
     "calamity.resourcePoint.output.attackedEffect": "Application de l'effet [%s%3$s] pendant %s seconds",
     "calamity.resourcePoint.output.attackEffect": "Envoie de l'effet [%s%3$s] \u00e0 l'ennemi pendant %s seconds",
-    "calamity.resourcePoint.output.effect": "Application de l'effet [%s%3$s] pendant %s seconds",
     "calamity.resourcePoint.output.effect.level2": " II",
+    "calamity.resourcePoint.output.effect": "Application de l'effet [%s%3$s] pendant %s seconds",
     "calamity.resourcePoint.output.item": "Don de [%s] * %s",
     "calamity.resourcePoint.sign.activated": "Activ\u00e9 !",
     "calamity.resourcePoint.sign.attack": "%s sec. attaque",
@@ -100,13 +100,13 @@
     "calamity.team.notReady.red": "L'\u00e9quipe %s %s a dit \\\"attendez !\\\" %s",
     "calamity.team.ready": "L'\u00e9quipe %s %s est pr\u00eate %s",
     "calamity.troll": "%s est tomb\u00e9 dans le trou ! Que c'est embarrassent !",
-    "calamity.welcome": "Bienvenu dans Calamity: \u00c9dition d\u00e9finitive ! Cr\u00e9e par Moesh.",
     "calamity.welcome.objective": "Objectif: Collecte assez de points afin d'atteindre le score. Clique %s afin de voir le \\\"Lis-moi\\\" en ligne ! (version anglaise seulement)",
+    "calamity.welcome": "Bienvenue dans Calamity: \u00c9dition d\u00e9finitive ! Cr\u00e9e par Moesh.",
     "commands.trigger.failed.unprimed": "Tu n'es pas autoris\u00e9 \u00e0 utiliser cette commande maintenant",
     "death.attack.outOfWorld": "%1$s est tomb\u00e9 dans la calamit\u00e9",
-    "map.author": "Moesh",
     "map.author.hover.link": "Clique pour voir le lien",
     "map.author.name": "Moesh",
+    "map.author": "Moesh",
     "map.name": "Calamity",
     "spacer.brackets.left": " (%s)",
     "spacer.left": " %s",
