--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -1,74 +1,87 @@
-{	
-	"arena.calamity.author":"Moesh",
-	"arena.calamity.icon":"z",
-	"arena.calamity.name":"Calamity",
-	"arena.shattering.author":"Moesh",
-	"arena.shattering.icon":"x",
-	"arena.shattering.name":"Shattering",
-	"book.pageIndicator": "§d§ov5.0.0",
-	"by.author":"by %s",
-	"calamity.book.cancelStart":"cancel",
-	"calamity.book.forfeit":"Forfeit",
-	"calamity.book.gm":"gm",
-	"calamity.book.hover.cancel":"Cancel match",
-	"calamity.book.hover.forfeit":"Vote to end the match [%s]",
-	"calamity.book.hover.joinBlue":"Join the Blue team",
-	"calamity.book.hover.joinRed":"Join the Red team",
-	"calamity.book.hover.leaveTeam.1":"Leave your team",
-	"calamity.book.hover.leaveTeam.2":"You can be randomized to a team",
-	"calamity.book.hover.notPlaying":"You will not play the next match",
-	"calamity.book.hover.readyTeam":"Toggle your team's ready status. Match countdown will begin when both teams are ready.",
-	"calamity.book.hover.resetSpawnItem":"Choose a new respawn item when you respawn",
-	"calamity.book.hover.start":"Start match after 15 seconds",
-	"calamity.book.leaveTeam":"Leave team",
-	"calamity.book.li.li":"  + ",
-	"calamity.book.li":"• ",
-	"calamity.book.matchOptions.title":"Match options:",
-	"calamity.book.objective.1":"Gain points by capturing resources, killing, or crafting items with iron ingots. First team to reach the score goal wins!",
-	"calamity.book.objective.2":"The score goal is lowered when iron ore is removed from the central mines.",
-	"calamity.book.objective.title":"Objective:",
-	"calamity.book.randomize.all":"Shuffle all",
-	"calamity.book.randomize.rest":"Shuffle rest",
-	"calamity.book.readyTeam":"Ready team",
-	"calamity.book.resetSpawnItem":"Reset spawn item",
-	"calamity.book.selectArena.title":"Select arena: ",
-	"calamity.book.spectate":"Spectate",
-	"calamity.book.start":"Start",
-	"calamity.book.teams.or":"%s or %s",
-	"calamity.book.teams":"Team:",
-	"calamity.book.title":"Calamity by Moesh",
-	"calamity.cheated.yourself":"You cheated not only the game, but yourself. You didn't grow. You didn't improve. You took a shortcut and gained nothing. You experienced a hollow victory. Nothing was risked and nothing was gained. It's sad that you don't know the difference.",
-	"calamity.feature.notAvailable":"Not available",
-	"calamity.forfeit.draw":"It's a draw!",
-	"calamity.forfeit.retracted.stopped":"%s has retracted their forfeit vote. Voting stopped.",
-	"calamity.forfeit.retracted":"%s has retracted their forfeit vote. %s out of the needed %s players on the team have voted to forfeit the game.",
-	"calamity.forfeit.started":"%s has voted to forfeit the game. %s out of the needed %s players have voted to forfeit. Use [%s] to vote.",
-	"calamity.forfeit":"%s %s has forfeited!",
-	"calamity.hover.sendTriggerCommand":"Click here to send the command to your text box",
-	"calamity.hover.viewGitHub":"Click to view the GitHub repo",
-	"calamity.joined.team":"%s joined %s",
-	"calamity.left.team":"%s abandoned hope",
-	"calamity.match.cancelled.byPlayer":"%s %s cancelled a match",
-	"calamity.match.cancelled.noPlayers":"At least one player must be on a team to start a match",
-	"calamity.match.cancelled":"Match %s cancelled",
-	"calamity.match.started.byPlayer":"%s %s started a match",
-	"calamity.match.stats":"%1$s to %2$s. %3$s %4$s won by %5$s points!",
-	"calamity.notReady":"Not ready",
-	"calamity.out.of.bounds":"Out of bounds!",
-	"calamity.player.sidelined":"%s has been moved to the sidelines. Nothing has been affected. The match continues!",
-	"calamity.points":"%s: +%s points",
-	"calamity.prestige.blueForfeit.blue":"You've kept your dignity",
-	"calamity.prestige.blueForfeit.red":"Blue knew not to mess with you!",
-	"calamity.prestige.lost":"Lost by %s points",
-	"calamity.prestige.redForfeit.blue":"Red gracefully gave up",
-	"calamity.prestige.redForfeit.red":"You'll live to fight again",
-	"calamity.prestige.won":"Won by %s points",
-	"calamity.ready":"Ready",
-	"calamity.reset.map":"Use [%s] to play again.",
-	"calamity.resetItems.alreadyChosen":"You have already chosen to reset your item next time you respawn.",
-	"calamity.resetItems.haventChosen":"You haven't selected an item yet. Nothing to reset.",
-	"calamity.resetItems":"You will get to select a new item the next time you respawn.",
-	"calamity.resetting":"Resetting to default state",
+{
+	"arena.calamity.author": "Moesh",
+	"arena.calamity.icon": "z",
+	"arena.calamity.name": "Calamity",
+	"arena.shattering.author": "Moesh",
+	"arena.shattering.icon": "x",
+	"arena.shattering.name": "Shattering",
+	"book.pageIndicator": "\u00a7d\u00a7ov5.0.0",
+	"by.author": "by %s",
+	"calamity.book.cancelStart": "Cancel",
+	"calamity.book.forfeit": "Forfeit",
+	"calamity.book.gm": "gm",
+	"calamity.book.hover.cancel": "Cancel match start",
+	"calamity.book.hover.forfeit": "Vote to end the match [%s]",
+	"calamity.book.hover.joinBlue": "Join the Blue team",
+	"calamity.book.hover.joinRed": "Join the Red team",
+	"calamity.book.hover.leaveTeam.1": "Leave your team",
+	"calamity.book.hover.leaveTeam.2": "You can be randomized to a team",
+	"calamity.book.hover.leaveTeam": "Leave your team. You can still be randomized to a team.",
+	"calamity.book.hover.notPlaying": "You will not play the next match",
+	"calamity.book.hover.readyTeam": "Toggle your team ready. When both teams are ready, match will start.",
+	"calamity.book.hover.resetSpawnItem": "Choose a new respawn item when you respawn",
+	"calamity.book.hover.start": "Start match after 15 seconds",
+	"calamity.book.hover.toggleSpectator.1": "Toggle your game mode between",
+	"calamity.book.hover.toggleSpectator.2": "adventure and creative",
+	"calamity.book.leaveTeam": "Leave team",
+	"calamity.book.li.li": "  + ",
+	"calamity.book.li": "\u2022 ",
+	"calamity.book.matchOptions.title": "Match options:",
+	"calamity.book.objective.1": "Gain points by capturing resources, killing, or crafting items with iron ingots. First team to reach the score goal wins!",
+	"calamity.book.objective.2": "The score goal is lowered when iron ore is removed from the central mines.",
+	"calamity.book.objective.title": "Objective:",
+	"calamity.book.readyTeam": "Ready team",
+	"calamity.book.resetSpawnItem": "Reset spawn item",
+	"calamity.book.selectArena.title": "Select arena: ",
+	"calamity.book.shuffle.all": "all",
+	"calamity.book.shuffle.rest": "rest",
+	"calamity.book.shuffle": "Shuffle players:",
+	"calamity.book.spectate": "Spectate",
+	"calamity.book.start": "Start",
+	"calamity.book.teams": "Team:",
+	"calamity.book.title": "Calamity by Moesh",
+	"calamity.book.toggleGamemode.hover": "Toggle game mode between spectator and adventure",
+	"calamity.book.toggleGamemode": "Game mode",
+	"calamity.cheated.yourself": "You cheated not only the game, but yourself. You didn't grow. You didn't improve. You took a shortcut and gained nothing. You experienced a hollow victory. Nothing was risked and nothing was gained. It's sad that you don't know the difference.",
+	"calamity.click.here": "here",
+	"calamity.feature.notAvailable": "Not available",
+	"calamity.forfeit.draw": "It's a draw!",
+	"calamity.forfeit.retracted.stopped": "%s has retracted their forfeit vote. Voting stopped.",
+	"calamity.forfeit.retracted": "%s has retracted their forfeit vote. %s out of the needed %s players on the team have voted to forfeit the game.",
+	"calamity.forfeit.started": "%s has voted to forfeit the game. %s out of the needed %s players have voted to forfeit. Use [%s] to vote.",
+	"calamity.forfeit": "%s %s has forfeited!",
+	"calamity.goal": "Finish line",
+	"calamity.hover.discord.DinnerPartyGames": "Join Dinner Party Games on Discord",
+	"calamity.hover.moesh.github": "Open github.com\/Moesh",
+	"calamity.hover.moesh.twitter": "Open twitter.com\/HeartlessMoesh",
+	"calamity.hover.sendTriggerCommand": "Click here to send the command to your text box",
+	"calamity.hover.viewGitHub": "Click to view the GitHub repo",
+	"calamity.joined.team": "%s joined %s",
+	"calamity.left.team": "%s abandoned hope",
+	"calamity.match.cancelled.byPlayer": "%s %s cancelled a match",
+	"calamity.match.cancelled.noPlayers": "At least one player must be on a team to start a match",
+	"calamity.match.cancelled": "Match %s cancelled",
+	"calamity.match.started.byPlayer": "%s %s started a match",
+	"calamity.match.stats": "%1$s to %2$s. %3$s %4$s won by %5$s points in %6$s!",
+	"calamity.notReady": "Not ready",
+	"calamity.out.of.bounds": "Out of bounds!",
+	"calamity.player.sidelined": "%s has been moved to the sidelines. Nothing has been affected. The match continues!",
+	"calamity.points": "%s: +%s points",
+	"calamity.prestige.blueForfeit.blue": "You've kept your dignity",
+	"calamity.prestige.blueForfeit.red": "Blue knew not to mess with you!",
+	"calamity.prestige.lost": "Lost by %s points",
+	"calamity.prestige.redForfeit.blue": "Red gracefully gave up",
+	"calamity.prestige.redForfeit.red": "You'll live to fight again",
+	"calamity.prestige.won": "Won by %s points",
+	"calamity.ready": "Ready",
+	"calamity.reset.map": "Use [%s] to play again.",
+	"calamity.resetItems.alreadyChosen": "You have already chosen to reset your item next time you respawn.",
+	"calamity.resetItems.haventChosen": "You haven't selected an item yet. Nothing to reset.",
+	"calamity.resetItems": "You will get to select a new item the next time you respawn.",
+	"calamity.resetting": "Resetting to default state",
+	"calamity.resourcePoint.enchantedBook.announced": "An %s was created by %s %s!",
+	"calamity.resourcePoint.enchantedBook.invalid": "No valid item found in main hand. Have a %s book.",
+	"calamity.resourcePoint.enchantedBook.valid": "Valid item found! %s given.",
 	"calamity.resourcePoint.output.attackedEffect": "Given [%s%3$s] for %s seconds",
 	"calamity.resourcePoint.output.attackEffect": "Sent enemy [%s%3$s] for %s seconds",
 	"calamity.resourcePoint.output.effect.level2": " II",
@@ -87,36 +100,32 @@
 	"calamity.resourcePoint.statusMessage.chargeSeconds": "Charging: %s seconds left",
 	"calamity.resourcePoint.statusMessage.resettingSecond": "Resetting: %s second left",
 	"calamity.resourcePoint.statusMessage.resettingSeconds": "Resetting: %s seconds left",
-	"calamity.seekGlory":"Seek glory or fall to calamity!",
-	"calamity.sidelines":"%s moved to the sidelines",
-	"calamity.startMatch.countdown.lastFiveSeconds":"%s...",
-	"calamity.startMatch.countdown":"Match ▶ begins in %s seconds",
+	"calamity.seekGlory": "Seek glory or fall to calamity!",
+	"calamity.sidelines": "%s moved to the sidelines",
+	"calamity.startMatch.countdown.lastFiveSeconds": "%s...",
+	"calamity.startMatch.countdown": "Match \u25b6 begins in %s seconds",
 	"calamity.subtitle.eye.release": "Eye opened",
 	"calamity.subtitle.eye.squish": "Eye squished",
-	"calamity.team.notReady.blue":"%s %s needs a moment %s",
-	"calamity.team.notReady.red":"%s %s says hol' up %s",
-	"calamity.team.ready":"%s %s is ready %s",
-	"calamity.troll": "%s fell in the troll hole! How embarassing!",
-	"calamity.welcome.objective":"Objective: Collect enough points to reach the score goal. Click %s to view the online readme!",
-	"calamity.welcome":"Welcome to Calamity: Definitive Edition! Created by Moesh.",
+	"calamity.team.notReady.blue": "%s %s needs a moment %s",
+	"calamity.team.notReady.red": "%s %s says hol' up %s",
+	"calamity.team.ready": "%s %s is ready %s",
+	"calamity.troll": "%s fell in the troll hole! How embarrassing!",
+	"calamity.welcome.objective": "Objective: Collect enough points to reach the score goal. Click %s to view the online readme!",
+	"calamity.welcome": "Welcome to Calamity: Definitive Edition! Created by Moesh.",
 	"commands.trigger.failed.unprimed": "You're not able to use this command right now",
 	"death.attack.outOfWorld": "%1$s fell to calamity",
-	"map.author.hover.link":"Click to view link",
-	"map.author.name":"Moesh",
-	"map.name":"Calamity",
-	"spacer.brackets.left":" (%s)",
-	"spacer.left":" %s",
-	"spacer.middle":"%s %s",
-	"spacer.right":"%s ",
-	"system.message":">>> %s",
+	"map.author.hover.link": "Click to view link",
+	"map.author.name": "Moesh",
+	"map.author": "Moesh",
+	"map.name": "Calamity",
+	"spacer.brackets.left": " (%s)",
+	"spacer.left": " %s",
+	"spacer.middle": "%s %s",
+	"spacer.or": "%s or %s",
+	"spacer.right": "%s ",
+	"system.message": ">>> %s",
 	"team.blue": "Blue",
 	"team.red": "Red",
 	"team.spectator": "Spectator",
-	"calamity.click.here":"here",
-	"translator.name":"Moesh",
-	"calamity.resourcePoint.enchantedBook.valid":"Valid item found! %s given.",
-	"calamity.resourcePoint.enchantedBook.invalid":"No valid item found in main hand. Have a %s book.",
-	"calamity.resourcePoint.enchantedBook.announced":"An %s was created by %s %s!",
-	"calamity.book.toggleGamemode":"Toggle gamemode",
-	"calamity.book.toggleGamemode.hover":"Toggle game mode between survival and adventure"
+	"translator.name": "Moesh"
 }
