Resolves #76: Send message about spawn tools

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -128,5 +128,6 @@
 	"team.red": "Red",
 	"team.spectator": "Spectator",
 	"translator.name": "Moesh",
-	"calamity.enchanted.item":"Enchanted Item"
+	"calamity.enchanted.item":"Enchanted Item",
+	"calamity.select.respawnItem":"Select your respawn item by using one of these tools."
 }
