Resolves #81: Players can now be shuffled

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -9,20 +9,15 @@
 	"by.author": "by %s",
 	"calamity.book.cancelStart": "Cancel",
 	"calamity.book.forfeit": "Forfeit",
-	"calamity.book.gm": "gm",
 	"calamity.book.hover.cancel": "Cancel match start",
 	"calamity.book.hover.forfeit": "Vote to end the match [%s]",
 	"calamity.book.hover.joinBlue": "Join the Blue team",
 	"calamity.book.hover.joinRed": "Join the Red team",
-	"calamity.book.hover.leaveTeam.1": "Leave your team",
-	"calamity.book.hover.leaveTeam.2": "You can be randomized to a team",
-	"calamity.book.hover.leaveTeam": "Leave your team. You can still be randomized to a team.",
+	"calamity.book.hover.leaveTeam": "Leave your team. You can still be shuffled onto a team.",
 	"calamity.book.hover.notPlaying": "You will not play the next match",
 	"calamity.book.hover.readyTeam": "Toggle your team ready. When both teams are ready, match will start.",
 	"calamity.book.hover.resetSpawnItem": "Choose a new respawn item when you respawn",
 	"calamity.book.hover.start": "Start match after 15 seconds",
-	"calamity.book.hover.toggleSpectator.1": "Toggle your game mode between",
-	"calamity.book.hover.toggleSpectator.2": "adventure and creative",
 	"calamity.book.leaveTeam": "Leave team",
 	"calamity.book.li.li": "  + ",
 	"calamity.book.li": "\u2022 ",
@@ -57,7 +52,7 @@
 	"calamity.hover.sendTriggerCommand": "Click here to send the command to your text box",
 	"calamity.hover.viewGitHub": "Click to view the GitHub repo",
 	"calamity.joined.team": "%s joined %s",
-	"calamity.left.team": "%s abandoned hope",
+	"calamity.left.team": "%s left their team",
 	"calamity.match.cancelled.byPlayer": "%s %s cancelled a match",
 	"calamity.match.cancelled.noPlayers": "At least one player must be on a team to start a match",
 	"calamity.match.cancelled": "Match %s cancelled",
@@ -129,5 +124,12 @@
 	"team.spectator": "Spectator",
 	"translator.name": "Moesh",
 	"calamity.enchanted.item":"Enchanted Item",
-	"calamity.select.respawnItem":"Select your respawn item by using one of these tools."
+	"calamity.select.respawnItem":"Select your respawn item by using one of these tools.",
+	"calamity.shuffle.error.noAvailablePlayers":"No players are available to be shuffled.",
+	"calamity.book.hover.shuffle.restOfPlayers":"Shuffle players who are not on a team",
+	"calamity.book.hover.shuffle.allPlayers":"Shuffle all players, except spectators",
+	"calamity.shuffle.newTeamAdditions":"Shuffled to %s: %s",
+	"calamity.shuffle.newTeam":"%s: %s",
+	"calamity.shuffle.playerShuffled.rest":"%s shuffled players who were not on a team",
+	"calamity.shuffle.playerShuffled.all":"%s shuffled all players"
 }
